# obs_shortcut

./: Cargo.toml
src/: event_table.rs  events.rs  main.rs  processes.rs  router.rs  short_cut.rs
