[package]
name = "obs_shortcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiinput = "0.1.0"
obws = "0.12.0"
toml = "0.8.12"
serde = "1.0.201"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
