[package]
name = "obs_shortcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = "0.12.0"
toml = "0.8.12"
serde = "1.0.201"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
once_cell = "1.8.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
]
